# magnum-examples

./: .gitignore  CMakeLists.txt
modules/: FindMagnumIntegration.cmake
package/ci/: appveyor.yml
src/: CMakeLists.txt
src/dart/: CMakeLists.txt  DartExample.cpp  configure.h.cmake
src/dart/urdf/: test.urdf
src/global-illumination/: CMakeLists.txt  GlobalIlluminationExample.cpp  LightData.cpp  LightData.h  MaterialData.cpp  MaterialData.h  VoxelConeTracingShader.cpp  VoxelConeTracingShader.frag  VoxelConeTracingShader.h  VoxelConeTracingShader.vert  VoxelVisualizationShader.cpp  VoxelVisualizationShader.frag  VoxelVisualizationShader.geom  VoxelVisualizationShader.h  VoxelVisualizationShader.vert  VoxelizationShader.cpp  VoxelizationShader.frag  VoxelizationShader.geom  VoxelizationShader.h  VoxelizationShader.vert  resources.conf
src/raytracing/: CMakeLists.txt  Octree.h  RaytracingExample.cpp  RaytracingShader.comp  RaytracingShader.cpp  RaytracingShader.h  RaytracingTypes.h  RenderTextureShader.frag  RenderTextureShader.vert  SimpleShader.cpp  SimpleShader.frag  SimpleShader.h  SimpleShader.vert  resources.conf
src/vct/: CMakeLists.txt  ClearVoxelsShader.h  GeometryShader.h  InjectRadianceShader.h  MipMapBaseShader.h  MipMapVolumeShader.h  RenderTextureShader.h  VCTExample.cpp  VCTShader.h  VoxelVisualizationShader.h  VoxelizationShader.h  resources.conf
src/vct/shaders/: ClearVoxels.comp  Geometry.frag  Geometry.vert  InjectRadiance.comp  MipMapBase.comp  MipMapVolume.comp  RenderTexture.frag  VCT.frag  VoxelVisualization.frag  VoxelVisualization.geom  VoxelVisualization.vert  Voxelization.frag  Voxelization.geom  Voxelization.vert  common.glsl
src/voxel-cone-tracing/: CMakeLists.txt  VoxelBaseShader.cpp  VoxelBaseShader.h  VoxelConeTracing.frag  VoxelConeTracing.vert  VoxelConeTracingExample.cpp  VoxelConeTracingShader.cpp  VoxelConeTracingShader.h  Voxelization.frag  Voxelization.geom  Voxelization.vert  VoxelizationShader.cpp  VoxelizationShader.h  resources.conf
